fixed problem with overflow-x: hidden on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,8 +1,5 @@
-body {
-  margin: 0;
-}
-
 .body {
   overflow-x: hidden;
+  position: fixed;
 }
 /*# sourceMappingURL=App.css.map */
